<resources>
    <string name="app_name">CommunityX</string>
    <string name="please_select_your_qualification">Please select your qualification.</string>
    <string name="let_s_get_your_account_set_up">Let\'s get your account set up.</string>
    <string name="please_select_your_classification">Please select your classification.</string>
    <string name="mobile_digits">0123456789</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="civil_rights">Civil Rights</string>
    <string name="human_rights">Human Rights</string>
    <string name="health">Health</string>
    <string name="are_we_missing_something_suggest_a_cause">Are we missing something? Suggest a cause.</string>
    <string name="senior">Senior</string>
    <string name="junior">Junior</string>
    <string name="sophomore">Sophomore</string>
    <string name="freshman">Freshman</string>
    <string name="send_otp">Send OTP</string>
    <string name="change_number">Change</string>
    <string name="add_profile_image">Add Profile Image</string>
    <string name="edit_profile_image">Edit Profile Image</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="signup">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="please_select_a_category">Please select a category.</string>
    <string name="student">I am a Student</string>
    <string name="professional">I am a Professional</string>
    <string name="organization">I am an Organization</string>
    <string name="continue_button">Continue</string>
    <string name="postal_code">Postal Code</string>
    <string name="birthday">Birthday</string>
    <string name="resend_otp">Resend otp</string>
    <string name="what_causes_do_you_care_about">What causes do you care about?</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="are_you_a_member_of_any_clubs">Are you a member of any clubs or organizations?</string>
    <string name="are_you_a_member_of_any_cause">Are you a member of any cause or group?</string>
    <string name="member_of_these_clubs">You are connected to following clubs or organizations</string>
    <string name="member_of_these_causes">You are connected to following causes or groups</string>
    <string name="role">Role</string>
    <string name="organization_">Organization</string>
    <string name="add_volunteer_experience">Add Volunteer Experience</string>
    <string name="your_role">Your Role</string>
    <string name="high_school">High School</string>
    <string name="college_university">College / University</string>
    <string name="please_login_to_continue">Please login to continue</string>
    <string name="communityx">CommunityX</string>
    <string name="enter_your_community">Enter Your Community</string>
    <string name="are_you_a_high_school_or_university_student">Are you a High School or University student?</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title">Title</string>
    <string name="search_your_friend_list">Search your friend list...</string>
    <string name="all_friends">All Friends</string>
    <string name="invitations">Invitations</string>
    <string name="suggestions">Suggestions</string>
    <string name="connect_with_allias">Connect with Allies</string>
    <string name="we_found_global">We found local and global allies that share your social impact interests. Add them as
        connections to build your community and Share your work
    </string>
    <string name="my_community">My Community</string>
    <string name="praise">All Praise</string>
    <string name="write_something_here">Write something here...</string>
    <string name="submit">Submit</string>
    <string name="your_global_community">Your Global Impact Community</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="tag_this_post_with_a_cause_or_movement">Tag this post with a cause or movement.</string>
    <string name="tag_this_event_post_with_a_cause_or_movement">Tag this event post with a cause or movement.</string>
    <string name="post">Post</string>
    <string name="create_post">Create Post</string>
    <string name="report_to_communityx">Report to CommunityX</string>
    <string name="type_of_disasters">Type of Disasters</string>
    <string name="type_of_report">Type of Report</string>
    <string name="enter_location">Enter Location</string>
    <string name="description">Description</string>
    <string name="human_disasters">Human Disasters</string>
    <string name="natural_disasters">Natural Disasters</string>
    <string name="donate_now">Donate Now</string>
    <string name="amount">Amount ($)</string>
    <string name="other_amount">Other Amount</string>
    <string name="funds_collected_last_donation">funds collected | Last Donation</string>
    <string name="proceed_to_pay">PROCEED TO PAY</string>
    <string name="pay_now">PAY NOW</string>
    <string name="select_options_to_pay">Select options to pay</string>
    <string name="target_amount">Target Amount($)</string>
    <string name="last_date_for_donation">Last date for Donation</string>
    <string name="event_title">Event Title</string>
    <string name="start_date_time"><![CDATA[Start Date & Time]]></string>
    <string name="end_date_time"><![CDATA[End Date & Time]]></string>
    <string name="add_location">Add Location</string>
    <string name="event_detail">Event Detail</string>
    <string name="start_date">Start Date*</string>
    <string name="end_date">End Date*</string>
    <string name="thanks_to_your_payment">Thanks to your payment.</string>
    <string name="you_donated">You donated</string>
    <string name="create_event">Create Event</string>
    <string name="crowdfunding">Crowdfunding</string>
    <string name="reporting">Reporting</string>
    <string name="posting_content">Posting Content</string>
    <string name="anim_start">Anim Start</string>
    <string name="start_time">Start Time</string>
    <string name="event_description">Event Description</string>
    <string name="going">Going</string>
    <string name="interested">Interested</string>
    <string name="end_time">End Time</string>
    <string name="not_interested">not interested</string>
    <string name="no_internet">No internet connection!</string>
    <string name="events">Events</string>
    <string name="logout">Logout</string>
    <string name="my_profile">My Profile</string>
    <string name="search">Search...</string>
    <string name="messages">Messages</string>
    <string name="earthquake_reported">Earthquake reported in your area. Do you need any help?</string>
    <string name="add_a_short_headline_about_yourself">Add a short headline about yourself.</string>
    <string name="add_headline">Add Headline</string>
    <string name="add_your_work_experiences">Add your work, internship, and other relevant experiences.</string>
    <string name="education">Education</string>
    <string name="club_organizations"><![CDATA[Club & Organizations]]></string>
    <string name="school_name">School Name</string>
    <string name="current_year">Current year</string>
    <string name="about">About</string>
    <string name="my_posts">My Posts</string>
    <string name="posts">Posts</string>
    <string name="view_profile">View Profile</string>
    <string name="add_experience">Add Experience</string>
    <string name="add_group_icon">Add Group Icon</string>
    <string name="group_subject">Group Subject</string>
    <string name="organization_name">Organization Name</string>
    <string name="email_address">Email Address</string>
    <string name="website">Website</string>
    <string name="location">Location</string>
    <string name="recent_job_title">Recent Job Title</string>
    <string name="recent_compnay">Recent Company</string>
    <string name="share_your_work_history">Share your work history.</string>
    <string name="read_more">Read more</string>
    <string name="my_hosted_events">My Hosted Events</string>
    <string name="i_am_interested_in">I am Interested In</string>
    <string name="activity">Activity</string>
    <string name="title_activity_send_location">Map</string>
    <string name="accurate_to_18_metres">Accurate to 18 meters</string>
    <string name="send_your_current_location">Send your current location</string>
    <string name="group_admin">Group Admin</string>
    <string name="reply">Reply</string>
    <string name="view_replies">View Replies</string>
    <string name="select_up_to_5">(Select up to 5)</string>
    <string name="experiences">Experiences</string>
    <string name="add_new_info_to_your_profile">Add new info to your profile</string>
    <string name="work_experience">Work Experience</string>
    <string name="club_organization"><![CDATA[Club & Organization]]></string>
    <string name="member_of_casuse_driven_org">Are you a member of any cause-driven organizations or groups?</string>
    <string name="please_enter_mobile">Please enter your Mobile number.</string>
    <string name="please_enter_password">Please enter your password.</string>
    <string name="please_enter_correct_mobile">Please enter correct mobile number.</string>
    <string name="password_length_mismatch">Password length cannot be less than 6 characters.</string>
    <string name="mobile_length_mismatch">Mobile number cannot be less than 10 digits.</string>
    <string name="string_donated_by">"Donated by (219)"</string>
    <string name="string_charity_life">Charity Life</string>
    <string name="string_created_by_you">Created by You, today at 7:15 pm</string>
    <string name="string_likes">Likes(1k)</string>
    <string name="string_filename">bitmap.png</string>
    <string name="string_build_social_impact">Build your social impact identity on CommunityX.</string>
    <string name="change">Change</string>
    <string name="logout_success">You have been Logout successfully!</string>
    <string name="first_name_field_empty">Please enter first name</string>
    <string name="last_name_field_empty">Please enter last name</string>
    <string name="name_field_empty">Please enter name</string>
    <string name="email_field_empty">Please enter email</string>
    <string name="dob_empty">Please enter Date of birth</string>
    <string name="postal_field_empty">Please enter postal code</string>
    <string name="mobile_field_empty">Please enter mobile number</string>
    <string name="click_on_send_otp">Please send otp to proceed</string>
    <string name="password_field_empty">Please enter password</string>
    <string name="confirm_password_field_empty">Please enter confirm password</string>
    <string name="password_not_matched">Password does not match.</string>
    <string name="mobiel_number_not_valid">Please enter valid phone number</string>
    <string name="mobiel_number_less_digits">Phone number cannot be less than 10 digits</string>
    <string name="company">Company</string>
    <string name="i_currently_work_in_this_role">I currently work in this role</string>
    <string name="save">SAVE</string>
    <string name="just_type_it_twice_and_try_not_to_forget_it_this_time">Just type it twice and try not to forget it
        this time.
    </string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="enter_new_password">Enter New Password</string>
</resources>