<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:paddingBottom="@dimen/_12ssp"
                                             android:background="@android:color/white"
                                             tools:context=".fragments.PostReportingFragment">

    <TextView
            android:id="@+id/text_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/colorBlackTitle"
            android:text="@string/report_to_communityx"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_18sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/text_type_disasters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_11ssp"
            android:layout_marginTop="@dimen/_16ssp"
            android:textColor="@color/colorLightGrey"
            android:text="@string/type_of_disasters"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginStart="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_heading"/>

    <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/text_type_disasters">
        <RadioButton android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/_12ssp"
                     android:textColor="@color/text_selector"
                     android:fontFamily="@font/poppins_medium"
                     tools:checked="true"
                     android:text="@string/natural_disasters"/>
        <RadioButton android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/_12ssp"
                     android:textColor="@color/text_selector"
                     android:fontFamily="@font/poppins_medium"
                     android:text="@string/human_disasters"/>
    </RadioGroup>

    <TextView
            android:id="@+id/text_type_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_11ssp"
            android:layout_marginTop="@dimen/_12ssp"
            android:textColor="@color/colorLightGrey"
            android:text="@string/type_of_report"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginStart="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_group"/>

    <Spinner
            android:id="@+id/spinner_type_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12ssp"
            android:layout_marginEnd="@dimen/_12ssp"
            android:background="@drawable/spinner_dropdown_gray"
            app:layout_constraintTop_toBottomOf="@id/text_type_report"/>

    <TextView
            android:id="@+id/text_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_11ssp"
            android:layout_marginTop="@dimen/_12ssp"
            android:textColor="@color/colorLightGrey"
            android:text="@string/enter_location"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginStart="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_type_report"/>

    <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_location"
            style="@style/textInputEditText"
            android:layout_width="match_parent"
            android:fontFamily="@font/poppins_medium"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10ssp"
            android:layout_marginEnd="@dimen/_12ssp"
            tools:text="Sao Paulo, Brazil"
            android:drawableRight="@drawable/ic_create_post_location"
            app:hintTextAppearance="@style/TextInputHint"
            app:layout_constraintTop_toBottomOf="@+id/text_location"/>

    <TextView
            android:id="@+id/text_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_11ssp"
            android:layout_marginTop="@dimen/_12ssp"
            android:textColor="@color/colorLightGrey"
            android:text="@string/description"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginStart="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_location"/>

    <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_description"
            style="@style/textInputEditText"
            android:layout_width="match_parent"
            android:fontFamily="@font/poppins_medium"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10ssp"
            android:layout_marginEnd="@dimen/_12ssp"
            tools:text="7.2 magnitude earthquake strikes Brazil, tremors felt in Jardim Helena, surrounding areas."
            app:hintTextAppearance="@style/TextInputHint"
            app:layout_constraintTop_toBottomOf="@+id/text_description"/>

    <Button android:layout_width="wrap_content"
            android:layout_height="@dimen/_25sdp"
            android:background="@drawable/button_active"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/post"
            android:id="@+id/button_post"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            style="?android:attr/borderlessButtonStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_description" app:layout_constraintVertical_bias="0.888"
            android:layout_marginTop="15dp"/>


</android.support.constraint.ConstraintLayout>