<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.ForgotPasswordActivity">

    <include
            android:id="@+id/topView"
            layout="@layout/toolbar_forgot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/text_forgot_password_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/poppins_regular"
            android:paddingStart="@dimen/_2sdp"
            android:text="@string/just_type_it_twice_and_try_not_to_forget_it_this_time"
            android:textColor="@color/colorLightGrey"
            android:textSize="@dimen/_12ssp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            app:layout_constraintTop_toBottomOf="@id/topView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/textinput_new_password"
            style="@style/textInputLayoutColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:hint="@string/enter_new_password"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            app:layout_constraintTop_toBottomOf="@+id/text_forgot_password_details"
            app:hintTextAppearance="@style/TextInputHint">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_new_password"
                style="@style/textInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:digits="@string/mobile_digits"
                android:fontFamily="@font/poppins_medium"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="15"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/textinput_confirm_password"
            style="@style/textInputLayoutColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:hint="@string/confirm_new_password"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            app:layout_constraintTop_toBottomOf="@+id/textinput_new_password"
            app:hintTextAppearance="@style/TextInputHint">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_confirm_password"
                style="@style/textInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:digits="@string/mobile_digits"
                android:fontFamily="@font/poppins_medium"
                android:inputType="numberDecimal"
                android:lines="1"
                android:maxLength="25"/>
    </android.support.design.widget.TextInputLayout>

    <Button
            android:id="@+id/button_send"
            style="@style/style_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/button_active"
            android:text="@string/save"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/textinput_confirm_password"/>
</android.support.constraint.ConstraintLayout>