<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/_12sdp"
        android:paddingEnd="@dimen/_12sdp"
        android:paddingTop="@dimen/_12sdp"
        android:id="@+id/coordinator_main"
        tools:context=".fragments.SignUpProfessional">

    <TextView
            android:id="@+id/text_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_your_work_history"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/colorBlackTitle"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <AutoCompleteTextView
            android:id="@+id/auto_complete_job"
            style="@style/textInputLayoutColor"
            android:hint="@string/recent_job_title"
            android:maxLines="1"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/text_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <AutoCompleteTextView
            android:id="@+id/auto_complete_company"
            style="@style/textInputLayoutColor"
            android:hint="@string/recent_compnay"
            android:maxLines="1"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@+id/auto_complete_job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <ProgressBar
            android:id="@+id/progress_bar"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"/>
</android.support.constraint.ConstraintLayout>